--- a/net-sample/net-sample.csproj
+++ b/net-sample/net-sample.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.DataLake.USQL.SDK" Version="1.4.200110" />
+  </ItemGroup>
 
 </Project>
